--- a/myStyle.css
+++ b/myStyle.css
@@ -1,7 +1,7 @@
-//this is a single line comment
-/* this is a multi-line comment */
-// we will choose body back-ground color
+/*this is a single line comment
+ this is a multi-line comment 
+we will choose body back-ground color*/
 
 body{
-    background-color: #FF0000;
+    background-color: red;
     }
